--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,14 @@ machine:
 
 dependencies:
   override:
-    - curl -L https://github.com/docker/compose/releases/download/1.1.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose chmod +x /usr/local/bin/docker-compose
+    - curl -L https://github.com/docker/compose/releases/download/1.2.0/docker-compose-Linux-x86_64 > /usr/local/bin/docker-compose chmod +x /usr/local/bin/docker-compose
 
 test:
   override:
     - sudo pip install --upgrade docker-compose
     - cd app; mocha
+deployment:
+  hub:
+    branch: master
+    commands:
+      - $DEPLOY
